[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/themes/font_big.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/themes/font_medium.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/menus/Crash.gd" type="Script" id=4]

[node name="Crash" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.5
margin_top = -209.0
margin_right = 191.5
margin_bottom = 209.0
custom_constants/separation = 15
alignment = 1

[node name="CrashLabel" type="Label" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 383.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 2 )
text = "You crashed."

[node name="HighscoreNotification" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 91.0
margin_right = 313.0
margin_bottom = 133.0
custom_fonts/font = ExtResource( 3 )
text = "You beat the highscore!"

[node name="Score" type="Label" parent="VBoxContainer"]
margin_top = 119.0
margin_right = 383.0
margin_bottom = 161.0
custom_fonts/font = ExtResource( 3 )
text = "Score: "
align = 1

[node name="Highscore" type="Label" parent="VBoxContainer"]
margin_top = 176.0
margin_right = 383.0
margin_bottom = 218.0
custom_fonts/font = ExtResource( 3 )
text = "Highscore: "
align = 1

[node name="Restart" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 233.0
margin_right = 383.0
margin_bottom = 275.0
custom_fonts/font = ExtResource( 3 )
text = "Restart"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 290.0
margin_right = 383.0
margin_bottom = 332.0
custom_fonts/font = ExtResource( 3 )
text = "Main Menu"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 347.0
margin_right = 383.0
margin_bottom = 389.0
custom_fonts/font = ExtResource( 3 )
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
